# fraud-detection-ai

./: README.md  pyproject.toml
app/: 01-ExecPipepline.py  02-CreateTables.py  03-LoadData.py  04-RunLLM.py  ProjectDatabase-01-Tables.sql  ProjectDatabase-Tables.sql
data/: clients.csv  customers.csv  financial_transactions.csv  properties.csv  transactions_history.csv
notebooks/: tests.ipynb
results/: insights.md
